// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInputWithIcon /> by default matches with snapshot 1`] = `
<div
  className="sc-htpNat cYEoPg k-Form-TextInputWithIcon k-Form-TextInputWithIcon--icon_left"
>
  
  <input
    aria-labelledby={null}
    className="sc-bdVaJa itLgUO k-Form-TextInput k-Form-TextInputWithIcon__input k-Form-TextInput--andromeda k-Form-TextInput--regular"
    disabled={false}
    name="text"
  />
  <span
    aria-hidden="true"
    className="k-Form-TextInputWithIcon__icon"
  >
    <svg
      aria-label={null}
      fill="none"
      height={14}
      viewBox="0 0 15 15"
      width={14}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M14 14L10.5 10.5"
        stroke="#333"
        strokeLinecap="round"
        strokeWidth="2"
      />
      <circle
        cx="6.3"
        cy="6.3"
        r="5.3"
        stroke="#333"
        strokeWidth="2"
      />
    </svg>
  </span>
</div>
`;

exports[`<TextInputWithIcon /> with disabled prop matches with snapshot 1`] = `
<div
  className="sc-htpNat cYEoPg k-Form-TextInputWithIcon k-Form-TextInputWithIcon--icon_left"
>
  
  <input
    aria-labelledby={null}
    className="sc-bdVaJa itLgUO k-Form-TextInput k-Form-TextInputWithIcon__input k-Form-TextInput--andromeda k-Form-TextInput--regular k-Form-TextInput--disabled"
    disabled={true}
    name="text"
  />
  <span
    aria-hidden="true"
    className="k-Form-TextInputWithIcon__icon k-Form-TextInputWithIcon__icon--disabled"
  >
    <svg
      aria-label={null}
      fill="none"
      height={14}
      viewBox="0 0 15 15"
      width={14}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M14 14L10.5 10.5"
        stroke="#333"
        strokeLinecap="round"
        strokeWidth="2"
      />
      <circle
        cx="6.3"
        cy="6.3"
        r="5.3"
        stroke="#333"
        strokeWidth="2"
      />
    </svg>
  </span>
</div>
`;

exports[`<TextInputWithIcon /> with disabled prop matches with snapshot 2`] = `
<div
  className="sc-htpNat cYEoPg k-Form-TextInputWithIcon k-Form-TextInputWithIcon--icon_right"
>
  
  <input
    aria-labelledby={null}
    className="sc-bdVaJa itLgUO k-Form-TextInput k-Form-TextInputWithIcon__input k-Form-TextInput--andromeda k-Form-TextInput--regular k-Form-TextInput--valid"
    disabled={false}
    name="text"
  />
  <span
    aria-hidden="true"
    className="k-Form-TextInputWithIcon__icon"
  >
    <svg
      aria-label={null}
      fill="none"
      height={14}
      viewBox="0 0 15 15"
      width={14}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M14 14L10.5 10.5"
        stroke="#333"
        strokeLinecap="round"
        strokeWidth="2"
      />
      <circle
        cx="6.3"
        cy="6.3"
        r="5.3"
        stroke="#333"
        strokeWidth="2"
      />
    </svg>
  </span>
</div>
`;

exports[`<TextInputWithIcon /> with props matches with snapshot 1`] = `
<div
  className="sc-htpNat cYEoPg k-Form-TextInputWithIcon k-Form-TextInputWithIcon--icon_left"
>
  
  <input
    aria-labelledby={null}
    className="sc-bdVaJa itLgUO k-Form-TextInput k-Form-TextInputWithIcon__input k-Form-TextInput--andromeda k-Form-TextInput--regular"
    disabled={false}
    name="text"
    placeholder="Les props sont transmises"
  />
  <span
    aria-hidden="true"
    className="k-Form-TextInputWithIcon__icon"
  >
    <svg
      aria-label={null}
      fill="none"
      height={14}
      viewBox="0 0 15 15"
      width={14}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M14 14L10.5 10.5"
        stroke="#333"
        strokeLinecap="round"
        strokeWidth="2"
      />
      <circle
        cx="6.3"
        cy="6.3"
        r="5.3"
        stroke="#333"
        strokeWidth="2"
      />
    </svg>
  </span>
</div>
`;
